# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-db-redb"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RedB‑backed implementation of the DatabaseBackend trait"
publish = false

[dependencies]
async-trait.workspace = true
redb = "4"
vlz-cve-client = { path = "../../core/vlz-cve-client" }
vlz-db = { path = "../../core/vlz-db" }
sha2.workspace = true          # for SEC‑004 integrity verification
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true     # for serialising cache entries to table values

[dev-dependencies]
vlz-db = { path = "../../core/vlz-db" }
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
