# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-go"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Go language plugin for verilyze (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
regex.workspace = true  # CVE-2022-24713 fix (SEC-022)
vlz-db = { path = "../../core/vlz-db" }
vlz-manifest-finder = { path = "../../core/vlz-manifest-finder" }
vlz-manifest-parser = { path = "../../core/vlz-manifest-parser" }
vlz-reachability-trait = { path = "../../core/vlz-reachability-trait" }
tokio = { workspace = true, features = ["fs", "rt"] }

[features]
perf-instrumentation = ["vlz-reachability-trait/perf-instrumentation"]

[dev-dependencies]
temp-env.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
