# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python language plugin for verilyze (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.0"
regex = ">=1.5.5"  # CVE-2022-24713 fix (SEC-022)
tempfile = "3"
vlz-db = { path = "../../core/vlz-db" }
vlz-manifest-finder = { path = "../../core/vlz-manifest-finder" }
vlz-manifest-parser = { path = "../../core/vlz-manifest-parser" }
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
