# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python language plugin for verilyze (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait.workspace = true
ruff_python_ast = "=0.0.5"
ruff_python_parser = "=0.0.5"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true  # CVE-2022-24713 fix (SEC-022)
tempfile.workspace = true
vlz-db = { path = "../../core/vlz-db" }
vlz-manifest-finder = { path = "../../core/vlz-manifest-finder" }
vlz-manifest-parser = { path = "../../core/vlz-manifest-parser" }
vlz-reachability-trait = { path = "../../core/vlz-reachability-trait" }
sha2.workspace = true
tokio = { workspace = true, features = ["fs", "rt"] }

[features]
tier-d = []
perf-instrumentation = ["vlz-reachability-trait/perf-instrumentation"]

[dev-dependencies]
anyhow = "1.0"
temp-env.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
toml.workspace = true
