# SPDX-FileCopyrightText: 2026 Travis Post <post.travis+git@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-rust"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Rust/Cargo language plugin for verilyze (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.0"
regex = "1"
vlz-db = { path = "../../core/vlz-db" }
vlz-manifest-finder = { path = "../../core/vlz-manifest-finder" }
vlz-manifest-parser = { path = "../../core/vlz-manifest-parser" }
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
