# SPDX-FileCopyrightText: 2026 Travis Post <post.travis@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vlz-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust/Cargo language plugin for verilyze (manifest finder, parser, resolver)"
publish = false

[dependencies]
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true  # CVE-2022-24713 fix (SEC-022)
vlz-db = { path = "../../core/vlz-db" }
vlz-manifest-finder = { path = "../../core/vlz-manifest-finder" }
vlz-manifest-parser = { path = "../../core/vlz-manifest-parser" }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
